@@ -1,3 +1,7 @@
+2004-08-27 Hasso Tepper <hasso at quagga.net>
+
+	* Update vtysh man page to reflect changes in shell.
+
 2004-08-10 Hasso Tepper <hasso at quagga.net>
 
 	* Updated man pages.
